2016-07-12  Niels Grewe <niels.grewe@halbordnung.de>

	* Headers/Foundation/NSObjCRuntime.h
	* Headers/GNUstepBase/GNUstep.h:
	
	Add NS_DESIGNATED_INITIALIZER macro

2016-07-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSICUString.m (UTextNSStringAccess):
	Fix to use signed integer variables so all the comparisons with zero
	as a boundary actually work as intended etc (spotted by Wolfgang).
	* Source/NSRunLoop.m: Closer to OSX behavior ... a nil date is treated
	like a date in the distant past (ie loop terminates at once), and the
	(-runUntilDate:) method fires any pending timers when given a date in
	the past.
	
2016-07-12  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/GSICUString.m (UTextNSStringAccess): Fix unsigned
	comparison to properly detect integer underflows.

2016-07-06  Niels Grewe <niels.grewe@halbordnung.de>

	* Tests/base/NSRegularExpression/basic.m: Test for -pattern
	double free.

2016-07-06  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSRegularExpression.m (-pattern): Fix bug where a UText
	structure owned by the icu library is incorrectly closed, which
	was causing a crash when -pattern is called more than once for the
	same NSRegularExpression.

2016-07-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSKeyValueObserving.m: Remove some unnecessary locking
	* Source/NSOperation.m: Simplify handling of finishing of operation
	to avoid occasional deadlock if an operation finishes in one thread
	while in another thread we are waiting for it.

2016-07-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSICUString.m: For immutable strings, cache the string
	length in the UText structure to avoid repeated calls to -length

2016-06-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSICUString.m: Re-implement the function to let ICU access
	the contents of an NSString.  The original version looks like it was
	broken for cases where an algorithm is moving backwards in the string
	(reverse search and regular expression parsing).